--- a/package.json
+++ b/package.json
@@ -2,16 +2,12 @@
   "name": "web-sdk",
   "version": "1.0.0",
   "description": "",
-  "main": "./es5/index.js",
+  "main": "./build-tsc/index.js",
   "types": "./build-tsc/index.d.js",
   "devDependencies": {
     "@types/node": "^16.3.1",
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "browserify": "^17.0.0",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "vinyl-fs": "^3.0.3",
@@ -21,9 +17,8 @@
   "scripts": {
     "watch": "tsc --watch",
     "build:ts": "tsc",
-    "build:es5": "rimraf ./es5 && babel build-tsc -d es5",
-    "build:js": "node ./scripts/build.js ./scripts/symbl.js ./LICENSE.md ./dist/web-sdk.js",
-    "build": "npm-run-all build:ts build:es5 build:js"
+    "build:js": "node ./scripts/build.js ./scripts/symbl.js ./LICENSE.md ./dist/symbl.js",
+    "build": "npm-run-all build:ts build:js"
   },
   "author": "",
   "license": "ISC"
