--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@types/node": "^16.3.1",
     "browserify": "^17.0.0",
+    "jest": "^27.0.6",
     "npm-run-all": "^4.1.5",
     "ts-loader": "^9.2.3",
     "tsc-watch": "^4.4.0",
