--- a/package.json
+++ b/package.json
@@ -5,22 +5,30 @@
   "main": "./build-tsc/index.js",
   "types": "./build-tsc/index.d.js",
   "devDependencies": {
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-typescript": "^7.14.5",
+    "@types/jest": "^26.0.24",
     "@types/node": "^16.3.1",
+    "babel-plugin-replace-ts-export-assignment": "0.0.2",
     "browserify": "^17.0.0",
     "jest": "^27.0.6",
     "npm-run-all": "^4.1.5",
     "ts-loader": "^9.2.3",
+    "ts-node": "^10.1.0",
     "tsc-watch": "^4.4.0",
     "typescript": "^4.3.5",
+    "uglify-js": "^3.13.10",
     "vinyl-fs": "^3.0.3",
     "vinyl-source-stream": "^2.0.0",
     "webpack-cli": "^4.7.2"
   },
   "scripts": {
     "watch": "tsc-watch --onSuccess \"npm run build\"",
+    "test": "jest src",
     "build:ts": "tsc",
     "build:js": "node ./scripts/build.js ./scripts/symbl.js ./LICENSE.md ./dist/symbl.js",
-    "build": "npm-run-all build:ts build:js"
+    "build:min.js": "uglifyjs ./dist/symbl.js -o ./dist/symbl.min.js --comments \"/^! symbl.js/\" -b beautify=false,ascii_only=true",
+    "build": "npm-run-all build:ts build:js build:min.js"
   },
   "author": "",
   "license": "ISC"
