add jsdom, update test script

--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "./build-tsc/index.js",
   "types": "./build-tsc/index.d.js",
   "devDependencies": {
-    "@rammer/api-client": "^0.0.16",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-typescript": "^7.14.5",
+    "@rammer/api-client": "^0.0.16",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.3.1",
     "babel-plugin-replace-ts-export-assignment": "0.0.2",
     "browserify": "^17.0.0",
     "jest": "^27.0.6",
+    "jsdom": "^16.6.0",
     "npm-run-all": "^4.1.5",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.1.0",
@@ -25,7 +26,7 @@
   },
   "scripts": {
     "watch": "tsc-watch --onSuccess \"npm run build\"",
-    "test": "jest src",
+    "test": "jest --silent src --env=jsdom",
     "build:ts": "tsc",
     "build:js": "node ./scripts/build.js ./scripts/symbl.js ./LICENSE.md ./dist/symbl.js",
     "build:min.js": "uglifyjs ./dist/symbl.js -o ./dist/symbl.min.js --comments \"/^! symbl.js/\" -b beautify=false,ascii_only=true",
