--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "scripts": {
     "watch": "tsc-watch --onSuccess \"npm-run-all build:js build:min.js\"",
     "test": "jest --silent src --env=jsdom",
-    "test-verbose": "jest src --env=jsdom",
+    "test-verbose": "jest --verbose src --env=jsdom",
     "build:lint": "eslint ./src/*",
     "build:ts": "tsc",
     "build:js": "node ./scripts/build.js ./scripts/symbl.js ./LICENSE.md ./dist/symbl.js",
