--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "watch": "tsc-watch --onSuccess \"npm-run-all build:js build:min.js\"",
     "test": "jest --silent src --env=jsdom",
     "test-verbose": "jest --verbose src --env=jsdom",
-    "build:lint": "eslint ./src/*",
+    "lint": "eslint ./src/*",
     "build:ts": "tsc",
     "build:js": "node ./scripts/build.js ./scripts/symbl.js ./LICENSE.md ./dist/symbl.js",
     "build:min.js": "uglifyjs ./dist/symbl.js -o ./dist/symbl.min.js --comments \"/^! symbl.js/\" -b beautify=false,ascii_only=true",
