--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "browserify": "^17.0.0",
     "eslint": "^7.32.0",
     "jest": "^27.0.6",
+    "jsdoc": "^3.6.7",
     "jsdom": "^16.6.0",
     "npm-run-all": "^4.1.5",
     "ts-loader": "^9.2.3",
@@ -32,6 +33,7 @@
     "test": "jest --silent src --env=jsdom",
     "test-verbose": "jest --verbose src --env=jsdom",
     "lint": "eslint ./src/*",
+    "doc": "jsdoc -r -c ./jsdoc.conf.json",
     "build:ts": "tsc",
     "build:js": "node ./scripts/build.js ./scripts/symbl.js ./LICENSE.md ./dist/symbl.js",
     "build:min.js": "uglifyjs ./dist/symbl.js -o ./dist/symbl.min.js --comments \"/^! symbl.js/\" -b beautify=false,ascii_only=true",
