--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,9 @@
 {
     "env": {
         "browser": true,
-        "amd": true,
+        "commonjs": true,
         "es6": true,
-        "node": true
+        "node": false
     },
     "extends": [
         "eslint:recommended",
