--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-typescript": "^7.14.5",
-    "@rammer/api-client": "^0.0.16",
+    "@rammerai/api-client": "^1.0.16",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.3.1",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
@@ -16,12 +16,12 @@
     "browserify": "^17.0.0",
     "eslint": "^7.32.0",
     "jest": "^27.0.6",
-    "jsdoc": "^3.6.7",
     "jsdom": "^16.6.0",
     "npm-run-all": "^4.1.5",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.1.0",
     "tsc-watch": "^4.4.0",
+    "typedoc": "^0.21.5",
     "typescript": "^4.3.5",
     "uglify-js": "^3.13.10",
     "vinyl-fs": "^3.0.3",
@@ -33,7 +33,7 @@
     "test": "jest --silent tests --env=jsdom",
     "test-verbose": "jest --verbose tests --env=jsdom",
     "lint": "eslint ./src/*",
-    "doc": "jsdoc -r -c ./jsdoc.conf.json",
+    "doc": "typedoc src",
     "build:ts": "tsc",
     "build:js": "node ./scripts/build.js ./scripts/symbl.js ./LICENSE.md ./dist/symbl.js",
     "build:min.js": "uglifyjs ./dist/symbl.js -o ./dist/symbl.min.js --comments \"/^! symbl.js/\" -b beautify=false,ascii_only=true",
