--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "devDependencies": {
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-typescript": "^7.14.5",
-    "@rammerai/api-client": "^1.0.16",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.3.1",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
@@ -42,6 +41,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "symbl-node": "^1.0.13"
+    "@symblai/symbl-js": "^1.1.1"
   }
 }
