--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "test-verbose": "jest --verbose tests --env=jsdom",
     "lint": "eslint ./src/*",
     "doc": "typedoc src",
-    "build:ts": "tsc",
+    "build:ts": "rimraf ./build-tsc && tsc",
     "build:js": "node ./scripts/build.js ./scripts/symbl.js ./LICENSE.md ./dist/symbl.js",
     "build:min.js": "uglifyjs ./dist/symbl.js -o ./dist/symbl.min.js --comments \"/^! symbl.js/\" -b beautify=false,ascii_only=true",
     "build": "npm-run-all build:ts build:js build:min.js"
@@ -41,6 +41,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@symblai/symbl-js": "^1.1.1"
+    "@symblai/symbl-js": "^1.1.3-a"
   }
 }
