--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -73,7 +73,7 @@
         "max-classes-per-file": "off",
         "max-depth": "error",
         "max-len": "off",
-        "max-lines": "error",
+        "max-lines": "off",
         "max-lines-per-function": "off",
         "max-nested-callbacks": "error",
         "max-params": "error",
