--- a/.github/workflows/upload-to-cdn.yaml
+++ b/.github/workflows/upload-to-cdn.yaml
@@ -40,3 +40,4 @@ jobs:
           credentials: ${{ secrets.GCP_CREDENTIALS }}
           path: dist
           destination: ${{ secrets.GCP_BUCKET_NAME }}/0.1.0
+          glob: '**/*.js'
