--- a/.github/workflows/upload-to-cdn.yaml
+++ b/.github/workflows/upload-to-cdn.yaml
@@ -38,6 +38,5 @@ jobs:
         uses: google-github-actions/upload-cloud-storage@main
         with:
           credentials: ${{ secrets.GCP_CREDENTIALS }}
-          path: dist
+          path: dist/symbl.min.js
           destination: ${{ secrets.GCP_BUCKET_NAME }}/0.1.0
-          glob: '**/*.js'
