Update package and build file.

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "test-verbose": "jest --verbose tests --env=jsdom",
     "lint": "eslint ./src/*",
     "doc": "typedoc src",
-    "build:ts": "rimraf ./build-tsc && tsc",
+    "build:ts": "rm -rf ./build-tsc && tsc",
     "build:js": "node ./scripts/build.js ./scripts/symbl.js ./LICENSE.md ./dist/symbl.js",
     "build:min.js": "uglifyjs ./dist/symbl.js -o ./dist/symbl.min.js --comments \"/^! symbl.js/\" -b beautify=false,ascii_only=true",
     "build": "npm run build:ts && npm run build:js && npm run build:min.js"
