--- a/.github/workflows/upload-to-cdn.yaml
+++ b/.github/workflows/upload-to-cdn.yaml
@@ -1,30 +1,9 @@
 name: Upload to CDN
 
 on:
-  push:
-    branches:
-    - 'main'
-    - 'develop'
-    - 'staging'
-    - 'feature/cdn-upload'
-
-# env:
-#   COMPONENT: ${{ github.event.repository.name }}
-#   CONTAINER_REGISTRY: gcr.io
-
-#   DEV_BRANCH: develop
-#   DEV_GCP_PROJECT: self-serve-dev-261801
-
-#   STAGING_BRANCH: staging
-#   STAGING_GCP_PROJECT: self-serve-dev-261801
-
-#   PROD_BRANCH: master
-#   PROD_GCP_PROJECT: prod-temp-265113
-
-#   ENCRYPTION_KEY: ${{ secrets.GIT_CRYPT_ENCRYPTION_KEY }}
-
-#   RAMMER_SNAPSHOT_REPO_USERNAME: ${{ secrets.RAMMER_SNAPSHOT_REPO_USERNAME }}
-#   RAMMER_SNAPSHOT_REPO_PASSWORD: ${{ secrets.RAMMER_SNAPSHOT_REPO_PASSWORD }}
+  create:
+    tags:
+      - v*
 
 jobs:
   build_and_push:
@@ -44,20 +23,19 @@ jobs:
       - run: npm install
       - run: npm run build
 
-      - name: get-npm-version
-        id: package-version
-        uses: martinbeentjes/npm-get-version-action@master
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       - id: upload_minified_file
         uses: google-github-actions/upload-cloud-storage@main
         with:
           credentials: ${{ secrets.GCP_CREDENTIALS }}
           path: dist/symbl.min.js
-          destination: ${{ secrets.GCP_BUCKET_NAME }}/${{ steps.package-version.outputs.current-version}}
+          destination: ${{ secrets.GCP_BUCKET_NAME }}/${{ env.RELEASE_VERSION }}
 
       - id: upload_unminified_file
         uses: google-github-actions/upload-cloud-storage@main
         with:
           credentials: ${{ secrets.GCP_CREDENTIALS }}
           path: dist/symbl.js
-          destination: ${{ secrets.GCP_BUCKET_NAME }}/${{ steps.package-version.outputs.current-version}}
+          destination: ${{ secrets.GCP_BUCKET_NAME }}/${{ env.RELEASE_VERSION }}
