Update webpack build. Decrease file size.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,14 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es5",
-    "outDir": "./build-tsc",
-    "lib": [ "dom", "es5", "es6" ],
+    "outDir": "build-tsc",
+    "lib": [ "dom" ],
     "noImplicitAny": false,
     "allowJs": true,
     "checkJs": false,
     "removeComments": true,
     "preserveConstEnums": true,
-    // "outFile": "./build-tsc/web-sdk.js",
     "sourceMap": true,
-    "esModuleInterop": true,
-    // "strict": true,
-    "declaration": true,
-    "moduleResolution": "node"
+    "declaration": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts"]
