--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@types/node": "^16.3.1",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-plugin-replace-ts-export-assignment": "0.0.2",
+    "babel-preset-es2015": "^6.24.1",
     "browserify": "^17.0.0",
     "eslint": "^7.32.0",
     "jest": "^27.0.6",
@@ -23,9 +26,12 @@
     "typedoc": "^0.21.5",
     "typescript": "^4.3.5",
     "uglify-js": "^3.13.10",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "vinyl-fs": "^3.0.3",
     "vinyl-source-stream": "^2.0.0",
-    "webpack-cli": "^4.7.2"
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1",
+    "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
     "watch": "tsc-watch --onSuccess \"npm-run-all build:js build:min.js\"",
@@ -34,13 +40,11 @@
     "lint": "eslint ./src/*",
     "doc": "typedoc src",
     "build:ts": "rm -rf ./build-tsc && tsc",
-    "build:js": "node ./scripts/build.js ./scripts/symbl.js ./LICENSE.md ./dist/symbl.js",
-    "build:min.js": "uglifyjs ./dist/symbl.js -o ./dist/symbl.min.js --comments \"/^! symbl.js/\" -b beautify=false,ascii_only=true",
-    "build": "npm run build:ts && npm run build:js && npm run build:min.js"
+    "build": "npm run build:ts && webpack --config webpack.config.js --mode production"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@symblai/symbl-js": "^1.1.3-a"
+    "@symblai/symbl-js": "^1.1.5-alpha.9"
   }
 }
