--- a/.github/workflows/upload-to-cdn.yaml
+++ b/.github/workflows/upload-to-cdn.yaml
@@ -39,3 +39,17 @@ jobs:
           credentials: ${{ secrets.GCP_CREDENTIALS }}
           path: dist/symbl.js
           destination: ${{ secrets.GCP_BUCKET_NAME }}/${{ env.RELEASE_VERSION }}
+
+      - id: upload_minified_file_to_latest
+        uses: google-github-actions/upload-cloud-storage@main
+        with:
+          credentials: ${{ secrets.GCP_CREDENTIALS }}
+          path: dist/symbl.min.js
+          destination: ${{ secrets.GCP_BUCKET_NAME }}/latest
+
+      - id: upload_unminified_file_to_latest
+        uses: google-github-actions/upload-cloud-storage@main
+        with:
+          credentials: ${{ secrets.GCP_CREDENTIALS }}
+          path: dist/symbl.js
+          destination: ${{ secrets.GCP_BUCKET_NAME }}/latest
