--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@symblai/symbl-web-sdk",
-  "version": "0.7.0-alpha.2",
+  "version": "0.7.0",
   "description": "",
   "main": "./build-tsc/index.js",
   "types": "./build-tsc/index.d.js",
@@ -46,7 +46,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@symblai/symbl-js": "1.3.0-alpha.1",
+    "@symblai/symbl-js": "1.3.0",
     "symbl-opus-encdec": "^0.1.2"
   }
 }
