--- a/.github/workflows/validate-build.yaml
+++ b/.github/workflows/validate-build.yaml
@@ -19,11 +19,11 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install
       
-#      - name: Run lint
-#        uses: actions/setup-node@v1
-#        with:
-#          node-version: ${{ matrix.node-version }}
-#      - run: npm run lint
+      - name: Run lint
+        uses: actions/setup-node@v1
+        with:
+         node-version: ${{ matrix.node-version }}
+      - run: npm run lint
 
       - name: Run tests
         uses: actions/setup-node@v1
