--- a/.github/workflows/validate-build.yaml
+++ b/.github/workflows/validate-build.yaml
@@ -17,16 +17,17 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm install
+      
+      - name: Install Dependencies
+        run: npm install
       
       - name: Run lint
         uses: actions/setup-node@v1
         with:
          node-version: ${{ matrix.node-version }}
-      - run: npm run lint
+      
+      - name: Run ESLint
+        run: npm run lint
 
       - name: Run tests
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm run test
+        run: npm run test
