Network connectivity detection (#18)
* Update Web SDK version.

* Fix readme.

* Update workflows.

* Update readme.

* Fix issue with multiple connections in same browser.

* Add updateSourceNode API. Update version number.

* License update to Apache 2.0

* Updated repo info, keywords and homepage

* Remove unnecessary logs.

* Update to 0.8.1.

* Update readme.

* Update version.

* Update call signature.

* Update version in readme.

* Update README.md

* Update README.md

* Network connectivity detection

* Version changes

* Version changes

Co-authored-by: avoliva <adam.voliva@symbl.ai>
Co-authored-by: Marcelo Jabali <mqjabali@gmail.com>
Co-authored-by: Adam Voliva <adamvoliva@gmail.com>

--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
   "name": "@symblai/symbl-web-sdk",
-  "version": "0.7.0-alpha.2",
-  "description": "",
+  "version": "0.8.3",
+  "description": "Symbl.ai Web SDK for accessing Symbl.ai APIs directly from the web browser.",
+  "homepage": "https://github.com/symblai/symbl-web-sdk",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/symblai/symbl-web-sdk.git"
+  },
+  "keywords": [
+    "symbl.ai",
+    "symbl",
+    "javascript",
+    "api",
+    "web",
+    "sdk"
+  ],
   "main": "./build-tsc/index.js",
   "types": "./build-tsc/index.d.js",
   "devDependencies": {
@@ -41,12 +54,13 @@
     "doc": "typedoc src",
     "build:ts": "rm -rf ./build-tsc && tsc",
     "build": "npm run build:ts && webpack --config webpack.config.js --mode production",
-    "publish-labs": "npm install && npm run build && npm publish --access public --tag labs"
+    "publish-next": "npm install && npm run build && npm publish --access public --tag next",
+    "publish-prod": "npm install && npm run build && npm publish --access public"
   },
   "author": "",
-  "license": "ISC",
+  "license": "Apache 2.0",
   "dependencies": {
-    "@symblai/symbl-js": "1.3.0-alpha.1",
+    "@symblai/symbl-js": "1.4.2-alpha.3",
     "symbl-opus-encdec": "^0.1.2"
   }
 }
