--- a/package.json
+++ b/package.json
@@ -29,15 +29,19 @@
     "babel-plugin-replace-ts-export-assignment": "0.0.2",
     "babel-preset-es2015": "^6.24.1",
     "browserify": "^17.0.0",
+    "dotenv": "^16.0.0",
     "eslint": "^7.32.0",
-    "jest": "^27.0.6",
+    "jest": "^27.5.1",
     "jsdom": "^16.6.0",
     "npm-run-all": "^4.1.5",
+    "runtime-typescript-checker": "^1.0.1",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.1.0",
     "tsc-watch": "^4.4.0",
+    "ttypescript": "^1.5.13",
     "typedoc": "^0.21.5",
     "typescript": "^4.3.5",
+    "typescript-is": "^0.19.0",
     "uglify-js": "^3.13.10",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vinyl-fs": "^3.0.3",
@@ -61,6 +65,7 @@
   "license": "Apache 2.0",
   "dependencies": {
     "@symblai/symbl-js": "1.4.5",
+    "consola": "^2.15.3",
     "symbl-opus-encdec": "^0.1.2"
   }
 }
