--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
   "license": "Apache 2.0",
   "dependencies": {
     "@symblai/symbl-js": "1.4.5",
+    "audio-context-mock": "^0.1.3",
     "consola": "^2.15.3",
+    "standardized-audio-context-mock": "^9.2.0",
     "symbl-opus-encdec": "^0.1.2"
   }
 }
