--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jsdom": "^16.6.0",
     "npm-run-all": "^4.1.5",
     "runtime-typescript-checker": "^1.0.1",
+    "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.1.0",
     "tsc-watch": "^4.4.0",
@@ -66,6 +67,7 @@
   "dependencies": {
     "@symblai/symbl-js": "1.4.5",
     "audio-context-mock": "^0.1.3",
+    "chai": "^4.3.6",
     "consola": "^2.15.3",
     "standardized-audio-context-mock": "^9.2.0",
     "symbl-opus-encdec": "^0.1.2"
