--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "preserveConstEnums": true,
     "sourceMap": true,
     "declaration": true,
+    "typeRoots": ["src2/types", "node_modules/@types"],
     "esModuleInterop": true,
       // Rest of ts config options...
       "plugins": [
@@ -17,6 +18,6 @@
           }
       ]
   },
-  "include": ["src2/**/*"],
+  "include": ["./src2", "./types"],
   "exclude": ["node_modules", "**/*.test.ts"]
 }
