--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,6 @@
     "preserveConstEnums": true,
     "sourceMap": true,
     "declaration": true,
-    "typeRoots": ["src2/types", "node_modules/@types"],
     "esModuleInterop": true,
       // Rest of ts config options...
       "plugins": [
@@ -18,6 +17,6 @@
           }
       ]
   },
-  "include": ["./src2", "./types"],
+  "include": ["./src2"],
   "exclude": ["node_modules", "**/*.test.ts"]
 }
