--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -147,7 +147,7 @@
         "no-shadow": "error",
         "no-tabs": "error",
         "no-template-curly-in-string": "error",
-        "no-ternary": "error",
+        "no-ternary": "warn",
         "no-throw-literal": "error",
         "no-trailing-spaces": "error",
         "no-undef-init": "error",
