--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   "author": "",
   "license": "Apache 2.0",
   "dependencies": {
-    "@symblai/symbl-js": "1.4.6",
+    "@symblai/symbl-js": "1.4.7-beta.1",
     "audio-context-mock": "^0.1.3",
     "chai": "^4.3.6",
     "consola": "^2.15.3",
