--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@symblai/symbl-web-sdk",
-  "version": "1.0.0-beta.34",
+  "version": "1.0.0-beta.46",
   "description": "Symbl.ai Web SDK for accessing Symbl.ai APIs directly from the web browser.",
   "homepage": "https://github.com/symblai/symbl-web-sdk",
   "repository": {
@@ -66,7 +66,7 @@
   "author": "",
   "license": "Apache 2.0",
   "dependencies": {
-    "@symblai/symbl-js": "1.4.7-beta.1",
+    "@symblai/symbl-js": "^1.4.7-beta.1",
     "audio-context-mock": "^0.1.3",
     "chai": "^4.3.6",
     "consola": "^2.15.3",
