--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,8 @@
     ],
     "rules": {
         "@typescript-eslint/no-var-requires": "off",
+        "@typescript-eslint/explicit-module-boundary-types": "off",
+        "@typescript-eslint/no-implicit-any": "off",
         "accessor-pairs": "error",
         "array-bracket-newline": "error",
         "array-bracket-spacing": "error",
@@ -43,7 +45,7 @@
         "curly": "error",
         "default-case": "error",
         "default-case-last": "error",
-        "default-param-last": "error",
+        "default-param-last": "off",
         "dot-location": "error",
         "dot-notation": "error",
         "eol-last": "error",
@@ -96,7 +98,7 @@
         "no-div-regex": "error",
         "no-duplicate-imports": "error",
         "no-else-return": "error",
-        "no-empty-function": "error",
+        "no-empty-function": "off",
         "no-eq-null": "error",
         "no-eval": "error",
         "no-extend-native": "error",
@@ -130,7 +132,7 @@
         "no-new-wrappers": "error",
         "no-nonoctal-decimal-escape": "error",
         "no-octal-escape": "error",
-        "no-param-reassign": "error",
+        "no-param-reassign": "off",
         "no-plusplus": "error",
         "no-promise-executor-return": "error",
         "no-proto": "error",
@@ -147,7 +149,7 @@
         "no-shadow": "error",
         "no-tabs": "error",
         "no-template-curly-in-string": "error",
-        "no-ternary": "warn",
+        "no-ternary": "off",
         "no-throw-literal": "error",
         "no-trailing-spaces": "error",
         "no-undef-init": "error",
@@ -183,27 +185,27 @@
         "padding-line-between-statements": "error",
         "prefer-arrow-callback": "error",
         "prefer-const": "error",
-        "prefer-destructuring": "error",
+        "prefer-destructuring": "off",
         "prefer-exponentiation-operator": "error",
-        "prefer-named-capture-group": "error",
+        "prefer-named-capture-group": "off",
         "prefer-numeric-literals": "error",
         "prefer-object-spread": "error",
         "prefer-promise-reject-errors": "error",
         "prefer-regex-literals": "error",
         "prefer-rest-params": "error",
-        "prefer-spread": "error",
+        "prefer-spread": "off",
         "prefer-template": "error",
         "quote-props": "error",
         "quotes": "error",
         "radix": "error",
         "require-atomic-updates": "error",
         "require-await": "error",
-        "require-unicode-regexp": "error",
+        "require-unicode-regexp": "off",
         "rest-spread-spacing": "error",
         "semi": "error",
         "semi-spacing": "error",
         "semi-style": "error",
-        "sort-imports": "error",
+        "sort-imports": "off",
         "sort-keys": "error",
         "sort-vars": "error",
         "space-before-blocks": "error",
