--- a/package.json
+++ b/package.json
@@ -42,20 +42,21 @@
     "ttypescript": "^1.5.13",
     "typedoc": "^0.21.5",
     "typescript": "^4.3.5",
-    "typescript-is": "^0.19.0",
     "uglify-js": "^3.13.10",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vinyl-fs": "^3.0.3",
     "vinyl-source-stream": "^2.0.0",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
+    "audio-context-mock": "^0.1.3",
+    "standardized-audio-context-mock": "^9.2.0",
     "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
     "watch": "tsc-watch --onSuccess \"npm run build\"",
     "test": "jest --silent tests --env=jsdom",
     "test-verbose": "jest --verbose tests --env=jsdom",
-    "lint": "eslint ./src/*",
+    "lint": "eslint src --quiet",
     "doc": "typedoc src",
     "build:ts": "rm -rf ./build-tsc && tsc",
     "build": "npm run build:ts && webpack --config webpack.config.js --mode production",
@@ -67,10 +68,7 @@
   "license": "Apache 2.0",
   "dependencies": {
     "@symblai/symbl-js": "^1.4.7-beta.1",
-    "audio-context-mock": "^0.1.3",
-    "chai": "^4.3.6",
     "consola": "^2.15.3",
-    "standardized-audio-context-mock": "^9.2.0",
     "symbl-opus-encdec": "^0.1.2"
   }
 }
