--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.0.0",
     "eslint": "^7.32.0",
     "jest": "^27.5.1",
+    "jest-fetch-mock": "^3.0.3",
     "jsdom": "^16.6.0",
     "npm-run-all": "^4.1.5",
     "runtime-typescript-checker": "^1.0.1",
@@ -69,6 +70,7 @@
   "dependencies": {
     "@symblai/symbl-js": "^1.4.7-beta.1",
     "consola": "^2.15.3",
-    "symbl-opus-encdec": "^0.1.2"
+    "symbl-opus-encdec": "^0.1.2",
+    "uuid": "^8.3.2"
   }
 }
