--- a/.github/workflows/validate-build.yaml
+++ b/.github/workflows/validate-build.yaml
@@ -5,7 +5,6 @@ on: push
 env:
   APP_ID: '${{ secrets.APP_ID }}'
   APP_SECRET: '${{ secrets.APP_SECRET }}'
-  ACCESS_TOKEN: null
   EXPIRED_ACCESS_TOKEN: '${{ secrets.EXPIRED_ACCESS_TOKEN }}'
 
 jobs:
@@ -39,7 +38,7 @@ jobs:
           data: '{"type":"application","appId":"${{ secrets.APP_ID }}","appSecret":"${{ secrets.APP_SECRET }}"}'
         
       - name: Access Token pushed to env variable
-        run: echo ${{ steps.accessTokenRequest.outputs.response.accessToken }} >> env.ACCESS_TOKEN
+        run: echo "ACCESS_TOKEN=${{ steps.accessTokenRequest.outputs.response.accessToken }}" >> $GITHUB_ENV
 
       - name: Run tests
         run: npm run test
