--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
       ]
   },
   "include": ["./src"],
-  "exclude": ["node_modules", "**/*.test.ts", "src/old/*"]
+  "exclude": ["node_modules", "**/*.test.ts"]
 }
