--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@symblai/symbl-web-sdk",
-  "version": "1.0.1-beta.24",
+  "version": "1.0.1-beta.64",
   "description": "Symbl.ai Web SDK for accessing Symbl.ai APIs directly from the web browser.",
   "homepage": "https://github.com/symblai/symbl-web-sdk",
   "repository": {
@@ -20,8 +20,9 @@
   "devDependencies": {
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-typescript": "^7.14.5",
+    "@types/consola": "^2.2.5",
     "@types/jest": "^26.0.24",
-    "@types/node": "^16.3.1",
+    "@types/node": "^16.11.29",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "audio-context-mock": "^0.1.3",
@@ -45,7 +46,7 @@
     "ttypescript": "^1.5.13",
     "typedoc": "^0.22.15",
     "typescript": "^4.3.5",
-    "uglify-js": "^3.13.10",
+    "uglify-js": "^3.15.4",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "vinyl-fs": "^3.0.3",
     "vinyl-source-stream": "^2.0.0",
@@ -59,7 +60,8 @@
     "test-verbose": "jest --verbose tests --env=jsdom",
     "lint": "eslint src --quiet",
     "doc": "typedoc src",
-    "build:ts": "rm -rf ./build-tsc && tsc",
+    "build:ts": "rm -rf ./build-tsc build/types && tsc",
+    "build:minify": "uglifyjs --compress --mangle -- build-tsc/**/*.js > build/index.js",
     "build": "npm run build:ts && webpack --config webpack.config.js --mode production",
     "publish-next": "npm install && npm run build && npm publish --access public --tag next",
     "publish-beta": "npm install && npm run build && npm publish --access public --tag beta",
@@ -68,7 +70,7 @@
   "author": "",
   "license": "Apache 2.0",
   "dependencies": {
-    "@symblai/symbl-js": "^1.4.7-beta.16",
+    "@symblai/symbl-js": "^1.4.7-beta.19",
     "consola": "^2.15.3",
     "symbl-opus-encdec": "^0.1.2",
     "uuid": "^8.3.2"
