--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@symblai/symbl-web-sdk",
-  "version": "1.0.1-beta.64",
+  "version": "1.0.1",
   "description": "Symbl.ai Web SDK for accessing Symbl.ai APIs directly from the web browser.",
   "homepage": "https://github.com/symblai/symbl-web-sdk",
   "repository": {
@@ -70,7 +70,7 @@
   "author": "",
   "license": "Apache 2.0",
   "dependencies": {
-    "@symblai/symbl-js": "^1.4.7-beta.19",
+    "@symblai/symbl-js": "^1.4.7",
     "consola": "^2.15.3",
     "symbl-opus-encdec": "^0.1.2",
     "uuid": "^8.3.2"
