--- a/.github/workflows/validate-build.yaml
+++ b/.github/workflows/validate-build.yaml
@@ -2,6 +2,11 @@ name: Validate build
 
 on: push
 
+env:
+  APP_ID: '${{ secrets.APP_ID }}'
+  APP_SECRET: '${{ secrets.APP_SECRET }}'
+  EXPIRED_ACCESS_TOKEN: '${{ secrets.EXPIRED_ACCESS_TOKEN }}'
+
 jobs:
   validate_build:
     runs-on: ubuntu-latest
@@ -24,5 +29,23 @@ jobs:
       - name: Run ESLint
         run: npm run lint
 
+      - name: Authenticate with Symbl
+        id: accessTokenRequest
+        uses: fjogeleit/http-request-action@v1
+        with:
+          url: 'https://api.symbl.ai/oauth2/token:generate'
+          method: 'POST'
+          data: '{"type":"application","appId":"${{ secrets.APP_ID }}","appSecret":"${{ secrets.APP_SECRET }}"}'
+
+      - name: Parse Access Token
+        id: accessTokenParsed
+        uses: sergeysova/jq-action@v2
+        with:
+          cmd: "jq '.accessToken' <<< '${{ steps.accessTokenRequest.outputs.response }}'"
+
+      - name: Push to ENV
+        run: echo "ACCESS_TOKEN=${{ steps.accessTokenParsed.outputs.value }}" >> $GITHUB_ENV
+
       - name: Run tests
         run: npm run test
+
