Various Type fixes.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -133,7 +133,7 @@
         "no-nonoctal-decimal-escape": "error",
         "no-octal-escape": "error",
         "no-param-reassign": "off",
-        "no-plusplus": "error",
+        "no-plusplus": "off",
         "no-promise-executor-return": "error",
         "no-proto": "error",
         "no-restricted-exports": "error",
