--- a/.github/workflows/upload-to-cdn.yaml
+++ b/.github/workflows/upload-to-cdn.yaml
@@ -23,30 +23,31 @@ jobs:
       - name: Set env
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v0'
+        with:
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
       - id: upload_minified_file
         uses: google-github-actions/upload-cloud-storage@v0
         with:
-          credentials: ${{ secrets.GCP_CREDENTIALS }}
           path: dist/symbl.min.js
           destination: ${{ secrets.GCP_BUCKET_NAME }}/js/beta/symbl-web-sdk/${{ env.RELEASE_VERSION }}
 
       - id: upload_unminified_file
         uses: google-github-actions/upload-cloud-storage@v0
         with:
-          credentials: ${{ secrets.GCP_CREDENTIALS }}
           path: dist/symbl.js
           destination: ${{ secrets.GCP_BUCKET_NAME }}/js/beta/symbl-web-sdk/${{ env.RELEASE_VERSION }}
 
       - id: upload_minified_file_to_latest
         uses: google-github-actions/upload-cloud-storage@v0
         with:
-          credentials: ${{ secrets.GCP_CREDENTIALS }}
           path: dist/symbl.min.js
           destination: ${{ secrets.GCP_BUCKET_NAME }}/js/beta/symbl-web-sdk/latest
 
       - id: upload_unminified_file_to_latest
         uses: google-github-actions/upload-cloud-storage@v0
         with:
-          credentials: ${{ secrets.GCP_CREDENTIALS }}
           path: dist/symbl.js
           destination: ${{ secrets.GCP_BUCKET_NAME }}/js/beta/symbl-web-sdk/latest
