--- a/.github/workflows/upload-to-cdn.yaml
+++ b/.github/workflows/upload-to-cdn.yaml
@@ -33,25 +33,25 @@ jobs:
         with:
           path: dist/symbl.min.js
           destination: ${{ secrets.GCP_BUCKET_NAME }}/js/beta/symbl-web-sdk/${{ env.RELEASE_VERSION }}
-          parent: true
+          parent: false
 
       - id: upload_unminified_file
         uses: google-github-actions/upload-cloud-storage@v0
         with:
           path: dist/symbl.js
           destination: ${{ secrets.GCP_BUCKET_NAME }}/js/beta/symbl-web-sdk/${{ env.RELEASE_VERSION }}
-          parent: true
+          parent: false
 
       - id: upload_minified_file_to_latest
         uses: google-github-actions/upload-cloud-storage@v0
         with:
           path: dist/symbl.min.js
           destination: ${{ secrets.GCP_BUCKET_NAME }}/js/beta/symbl-web-sdk/latest
-          parent: true
+          parent: false
 
       - id: upload_unminified_file_to_latest
         uses: google-github-actions/upload-cloud-storage@v0
         with:
           path: dist/symbl.js
           destination: ${{ secrets.GCP_BUCKET_NAME }}/js/beta/symbl-web-sdk/latest
-          parent: true
+          parent: false
