--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@symblai/symbl-web-sdk",
-  "version": "1.0.3",
+  "version": "1.0.3-beta.10",
   "description": "Symbl.ai Web SDK for accessing Symbl.ai APIs directly from the web browser.",
   "homepage": "https://github.com/symblai/symbl-web-sdk",
   "repository": {
@@ -16,7 +16,7 @@
     "sdk"
   ],
   "main": "./build/index.js",
-  "types": "./types/index.d.ts",
+  "types": "./build/index.d.ts",
   "devDependencies": {
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-typescript": "^7.14.5",
