--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
   "license": "Apache 2.0",
   "dependencies": {
     "@symblai/symbl-js": "^1.4.7",
-    "consola": "^2.15.3",
+    "loglevel": "^1.8.0",
     "symbl-opus-encdec": "^0.1.2",
     "uuid": "^8.3.2"
   }
