--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "preserveConstEnums": true,
     "sourceMap": true,
     "declaration": true,
+    "declarationDir": "./types",
     "esModuleInterop": true
   },
   "include": ["./src"],
